@startuml
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam shadowing false
skinparam roundcorner 8
skinparam ArrowColor #355863
skinparam classBackgroundColor #EAF3F2
skinparam classBorderColor #355863
skinparam participantBackgroundColor #EAF3F2
skinparam participantBorderColor #355863
skinparam sequenceLifeLineBorderColor #7A979C
skinparam noteBackgroundColor #FFF2DA
skinparam noteBorderColor #D8AA64
skinparam packageBackgroundColor #F5F8F7
skinparam packageBorderColor #6E8B91
skinparam stateBackgroundColor #EAF3F2
skinparam stateBorderColor #355863
hide empty members
title Zustandsmaschine eines Gegners (Brain)
[*] --> SPAWNING
SPAWNING --> APPROACH : Auftritt vorbei
APPROACH --> WINDUP : bereit und Abklingzeit 0\n/ Vorwarnung
WINDUP --> STRIKE : Ausholzeit abgelaufen
STRIKE --> RECOVER : Angriff beendet
RECOVER --> APPROACH : Erholung vorbei
APPROACH --> STUNNED : Treffer / Impuls
STUNNED --> APPROACH
APPROACH --> HIDDEN : Aal taucht ab
HIDDEN --> WINDUP : Figur in Reichweite
note right of RECOVER : Bosse: Panzerung aus,\nKern offen

@enduml
